<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:transitionGroup="true"
    tools:context=".ui.AboutFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="always"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/shareThisApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/share_this_app"
                android:textAllCaps="false"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/viewOnGooglePlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/view_on_google_play"
                android:textAllCaps="false"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/viewSourceCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_source_code"
                android:textAllCaps="false"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <Button
                android:id="@+id/openSourceLicenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/open_source_licenses"
                android:textAllCaps="false"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/chooseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_theme"
                android:textAllCaps="false"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
            <Button
                android:id="@+id/faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                android:textAllCaps="false"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>